2017-04-03  Lukas Kluft  <lukas.kluft@gmail.com>

	* typhon/arts/griddedfield.py (__repr__):

	The old implementation failed to inspect the shape of non-array
	grids. Fixed this bug to allow the representation of lists
	(e.g. species in atm_fields_compact).

2017-03-31  Gerrit Holl  <g.holl@reading.ac.uk>

	* typhon/datasets/dataset(SatDataset._add_gran_to_data):

	- Proceeded with preparations for handling xarray datasets.  Work in
	progress.

	* typhon/math/stats.py(adev): Added clarifying comments

	* typhon/physics/units/tools.py(UnitsAwareDataArray):

	- Added methods for handling reducing operations, starting with sum
	and diff but should probably be generalised to std, min, max, mean,
	and others.

2017-03-31  Lukas Kluft  <lukas.kluft@gmail.com>

	* doc/typhon.arts.rst: Included `ARTSCAT5`.

2017-03-31  Lukas Kluft  <lukas.kluft@gmail.com>

	* typhon/arts/griddedfield.py:

	* (check_atm_fields_compact):

	Started to implement a method to check, if a GriddedField fits
	the requirements of an atm_fields_compact.

	* (__repr__):

	Improved the robustness of the function. It now works even if
	the GriddedField name or the dataname is not set.

	* typhon/arts/scattering.py: Minor PEP8 fixes.

2017-03-31  Richard Larsson  <ric.larsson@gmail.com>

	* typhon/arts/catalogues.py:  Added ARTSCAT5-class.  Added
	some functionality to QuantumIdentifier, QuantumNumberRecord,
	and QuantumNumbers making them dictionaries with special rules
	and logic.  
	
	Also added Rational-class based on fractions.Fraction with special
	__repr__ rules to mimic ARTS Rational-class reading
	
	The logic in the quantum classes are such that == means all 
	quantum numbers are equal and no quantum numbers are missing, <=
	means all quantum numbers in the LHS are in RHS but that there could
	be more numbers in RHS that are ignored, and < means that there 
	has to be more numbers in RHS than LHS.  In all cases, the numbers
	that do exist must be consistent for truth. (!=, >= and > behave 